--- a/10_fifth_model_implementation.ipynb
+++ b/10_fifth_model_implementation.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "4  0.974667  0.780613  0.705535  0.609188  0.844070  0.000000"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,29 +913,27 @@
     "    return matrix\n",
     "\n",
     "\n",
-    "pd.DataFrame(build_lop_matrix([2, 0, 1, 3, 5, 4], conditional_entropies))"
+    "lop_matrix = build_lop_matrix([2, 0, 1, 3, 5, 4], conditional_entropies)\n",
+    "pd.DataFrame(lop_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.341059769376917"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def build_lop_matrix(\n",
-    "    label_order: List[int],\n",
-    "    conditional_entropies: ConditionalEntropies\n",
-    ") -> LOPMatrix:\n",
-    "    matrix = {}\n",
-    "\n",
-    "    for row_i in label_order:\n",
-    "        matrix[row_i] = {}\n",
-    "        for row_j in label_order:\n",
-    "            conditional_entropy = conditional_entropies[row_i][row_j]\n",
-    "            matrix[row_i][row_j] = conditional_entropy\n",
-    "        \n",
-    "    return matrix\n",
-    "\n",
     "def calculate_lop(lop_matrix: LOPMatrix) -> float:\n",
     "    matrix_size_n = len(lop_matrix)\n",
     "    lop_df = pd.DataFrame(lop_matrix)\n",
@@ -953,6 +951,129 @@
     "    \n",
     "    return upper_triangle_sum\n",
     "\n",
+    "calculate_lop(lop_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(fixed) hamming loss: 0.0883500557413601\n",
+      "(fixed) f1 score: 0.696385030865942\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FixedClassifierChain:\n",
+    "    \"\"\"\n",
+    "    Works just like the `ClassifierChain` class from `scikit-multilearn`, but ensures\n",
+    "    that the output is in the same order as the labels in the dataset\n",
+    "    regardless of the custom order of the classifiers\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, base_classifier: Any, order: List[int]) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.order = order\n",
+    "        # TODO: should have a validation for the order, as it should not contain duplicated values\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        label_count = y.shape[1]\n",
+    "        # TODO: maybe add some validation, sa the label count must match the order length\n",
+    "\n",
+    "        self.classifiers = {}\n",
+    "        # using a dict instead of a list as the index has to be the label following the custom order\n",
+    "        # a list would also work, but it is more readable this way\n",
+    "\n",
+    "        self.metrics = []\n",
+    "\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "        for label in self.order:\n",
+    "            y_label = y[:, label].todense()\n",
+    "\n",
+    "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
+    "            # convert_matrix_to_vector\n",
+    "\n",
+    "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier.fit(X_extended, y_label_vector)\n",
+    "            self.classifiers[label] = meta_classifier\n",
+    "\n",
+    "            X_extended = np.hstack([X_extended, y_label])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "\n",
+    "            # the following section gathers metrics throughout the training\n",
+    "            # it has no impact in the actual model performance, but it might\n",
+    "            # be interesting to study how to model behaves as it is being trained\n",
+    "            metrics_X_train, metrics_X_test, metrics_y_train, metrics_y_test = train_test_split(\n",
+    "                X_extended, y_label_vector, test_size=0.33, random_state=42\n",
+    "            )\n",
+    "\n",
+    "            meta_classifier_for_metrics = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier_for_metrics.fit(metrics_X_train, metrics_y_train)\n",
+    "            metrics_predictions = meta_classifier_for_metrics.predict(metrics_X_test)\n",
+    "\n",
+    "            hl = metrics.hamming_loss(metrics_y_test, metrics_predictions)\n",
+    "            f1 = metrics.f1_score(metrics_y_test, metrics_predictions, average=\"macro\")\n",
+    "\n",
+    "            self.metrics.append({\n",
+    "                \"training_for_label\": label,\n",
+    "                \"hamming_loss\": hl,\n",
+    "                \"f1_score\": f1\n",
+    "            })\n",
+    "        \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        X_extended = np.asarray(X.todense())\n",
+    "\n",
+    "        predicted_labels = {}\n",
+    "        for label in self.order:\n",
+    "            prediction = self.classifiers[label].predict(X_extended)\n",
+    "            predicted_labels[label] = prediction\n",
+    "            \n",
+    "            reshaped_prediction = np.asarray(prediction).reshape(-1, 1)\n",
+    "            X_extended = np.hstack([X_extended, reshaped_prediction])\n",
+    "            X_extended = np.asarray(X_extended)\n",
+    "        \n",
+    "        predictions_in_original_label_order = []\n",
+    "        original_label_order = np.arange(len(self.order))\n",
+    "        for label in original_label_order:\n",
+    "            predictions_in_original_label_order.append(predicted_labels[label])\n",
+    "        # this is **very important**, otherwise the output of the model will not\n",
+    "        # be comparable to the testing dataset \n",
+    "\n",
+    "        reshaped_array = np.asarray(predictions_in_original_label_order).T\n",
+    "        return reshaped_array\n",
+    "\n",
+    "\n",
+    "fixed_model = FixedClassifierChain(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[4, 5, 2, 0, 3, 1]\n",
+    "    )\n",
+    "\n",
+    "X = datasets[\"scene\"][\"X_train\"]\n",
+    "y = datasets[\"scene\"][\"y_train\"]\n",
+    "X_test = datasets[\"scene\"][\"X_test\"]\n",
+    "y_test = datasets[\"scene\"][\"y_test\"]\n",
+    "\n",
+    "fixed_model.fit(X, y)\n",
+    "fixed_preds = fixed_model.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, fixed_preds)\n",
+    "f1_score = metrics.f1_score(y_test, fixed_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(fixed) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(fixed) f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class FixedClassifierChainWithLOPAndGA():\n",
     "    def __init__(\n",
     "        self,\n",
@@ -967,6 +1088,8 @@
     "            self.random_state = np.random.randint(0, 1000)\n",
     "        else:\n",
     "            self.random_state = random_state\n",
+    "\n",
+    "        self.conditional_entropies = None\n",
     "    \n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.conditional_entropies = calculate_conditional_entropies(y)\n",
@@ -1016,10 +1139,10 @@
     "        return self.test_solution(solution)\n",
     "\n",
     "    def test_solution(self, label_order: List[int]) -> float:\n",
-    "        if self.probabilities is None or self.entropies is None:\n",
+    "        if self.conditional_entropies is None:\n",
     "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
     "        \n",
-    "        lop_matrix = build_lop_matrix(label_order, self.probabilities, self.entropies)\n",
+    "        lop_matrix = build_lop_matrix(label_order, self.conditional_entropies)\n",
     "        return calculate_lop(lop_matrix)\n",
     "    \n",
     "    def predict(self, X: Any) -> Any:\n",
@@ -1027,6 +1150,26 @@
     "            raise Exception(\"model was not trained yet\")\n",
     "\n",
     "        return self.best_classifier.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_lop_model = FixedClassifierChainWithLOPAndGA(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    num_generations=20)\n",
+    "\n",
+    "fixed_lop_model.fit(X, y)\n",
+    "fixed_lop_preds = fixed_lop_model.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, fixed_lop_preds)\n",
+    "f1_score = metrics.f1_score(y_test, fixed_lop_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(fixed lop) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(fixed lop) f1 score: {f1_score}\")"
    ]
   }
  ],
