implements classifier chain for partial ordering

--- a/10_fifth_model_implementation.ipynb
+++ b/10_fifth_model_implementation.ipynb
@@ -1156,7 +1156,16 @@
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(fixed lop) hamming loss: 0.08821070234113712\n",
+      "(fixed lop) f1 score: 0.6991415107601321\n"
+     ]
+    }
+   ],
    "source": [
     "fixed_lop_model = FixedClassifierChainWithLOPAndGA(\n",
     "    RandomForestClassifier(random_state=42),\n",
@@ -1171,6 +1180,464 @@
     "print(f\"(fixed lop) hamming loss: {hamming_loss}\")\n",
     "print(f\"(fixed lop) f1 score: {f1_score}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10.9. Back to the partial orders\n",
+    "\n",
+    "Now, let's get back to the model with partial orders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.696103</td>\n",
+       "      <td>0.044246</td>\n",
+       "      <td>0.053738</td>\n",
+       "      <td>0.053436</td>\n",
+       "      <td>0.020453</td>\n",
+       "      <td>0.024041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.044246</td>\n",
+       "      <td>0.574336</td>\n",
+       "      <td>0.037794</td>\n",
+       "      <td>0.037582</td>\n",
+       "      <td>0.055496</td>\n",
+       "      <td>0.043591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.053738</td>\n",
+       "      <td>0.037794</td>\n",
+       "      <td>0.640672</td>\n",
+       "      <td>0.019622</td>\n",
+       "      <td>0.042546</td>\n",
+       "      <td>0.052941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.053436</td>\n",
+       "      <td>0.037582</td>\n",
+       "      <td>0.019622</td>\n",
+       "      <td>0.638716</td>\n",
+       "      <td>0.007179</td>\n",
+       "      <td>0.046674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.020453</td>\n",
+       "      <td>0.055496</td>\n",
+       "      <td>0.042546</td>\n",
+       "      <td>0.007179</td>\n",
+       "      <td>0.775802</td>\n",
+       "      <td>0.071355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.024041</td>\n",
+       "      <td>0.043591</td>\n",
+       "      <td>0.052941</td>\n",
+       "      <td>0.046674</td>\n",
+       "      <td>0.071355</td>\n",
+       "      <td>0.690832</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5\n",
+       "0  0.696103  0.044246  0.053738  0.053436  0.020453  0.024041\n",
+       "1  0.044246  0.574336  0.037794  0.037582  0.055496  0.043591\n",
+       "2  0.053738  0.037794  0.640672  0.019622  0.042546  0.052941\n",
+       "3  0.053436  0.037582  0.019622  0.638716  0.007179  0.046674\n",
+       "4  0.020453  0.055496  0.042546  0.007179  0.775802  0.071355\n",
+       "5  0.024041  0.043591  0.052941  0.046674  0.071355  0.690832"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MutualInformation = List[List[float]]\n",
+    "\n",
+    "def calculate_mutual_information(y: Any) -> MutualInformation:\n",
+    "    dense_y = y.todense()\n",
+    "\n",
+    "    results = []\n",
+    "    for label_x in range(dense_y.shape[1]):\n",
+    "        results.append([])\n",
+    "        for label_y in range(dense_y.shape[1]):\n",
+    "            y_label_specific_x = np.asarray(dense_y[:, label_x]).reshape(-1)\n",
+    "            y_label_specific_y = np.asarray(dense_y[:, label_y]).reshape(-1)\n",
+    "            \n",
+    "            e = drv.information_mutual(y_label_specific_x.tolist(), y_label_specific_y.tolist())\n",
+    "            results[label_x].append(e)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "r = calculate_mutual_information(y)\n",
+    "pd.DataFrame(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: [], 0: [2], 1: [0], 3: [0], 5: [2, 1, 3], 4: [2, 1, 5]}"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def build_partial_orders(order: List[int], mutual_information: MutualInformation, threshold: float) -> Any:\n",
+    "    labels_to_expand = {}\n",
+    "    for pos_i in range(len(order)):\n",
+    "        label_i = order[pos_i]\n",
+    "        labels_to_expand[label_i] = []\n",
+    "\n",
+    "        for label_j in order[:pos_i]:\n",
+    "            mi = mutual_information[label_i][label_j]\n",
+    "            if mi > threshold:\n",
+    "                labels_to_expand[label_i].append(label_j)\n",
+    "    \n",
+    "    return labels_to_expand\n",
+    "\n",
+    "build_partial_orders([2, 0, 1, 3, 5, 4], r, 0.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CCPartialOrder:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        base_classifier: Any,\n",
+    "        threshold: float = 0.5,\n",
+    "        num_generations: int = 5,\n",
+    "        random_state: Optional[int] = None\n",
+    "    ) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.threshold = threshold\n",
+    "        self.num_generations = num_generations\n",
+    "\n",
+    "        if random_state is None:\n",
+    "            self.random_state = np.random.randint(0, 1000)\n",
+    "        else:\n",
+    "            self.random_state = random_state\n",
+    "\n",
+    "        self.conditional_entropies = None\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.conditional_entropies = calculate_conditional_entropies(y)\n",
+    "        self.mutual_information = calculate_mutual_information(y)\n",
+    "        \n",
+    "        label_count = y.shape[1]\n",
+    "        label_space = np.arange(label_count)\n",
+    "        solutions_per_population = 50\n",
+    "\n",
+    "        ga_model = pygad.GA( #type:ignore\n",
+    "            gene_type=int,\n",
+    "            gene_space=label_space,\n",
+    "            random_seed=self.random_state,\n",
+    "            save_best_solutions=False,\n",
+    "            fitness_func=self.model_fitness_func,\n",
+    "            allow_duplicate_genes=False, # very important, otherwise we will have duplicate labels in the ordering\n",
+    "            num_genes=label_count,\n",
+    "\n",
+    "            # set up\n",
+    "            num_generations=self.num_generations,\n",
+    "            sol_per_pop=solutions_per_population,\n",
+    "\n",
+    "            # following what the article describes\n",
+    "            keep_elitism=5,\n",
+    "            parent_selection_type=\"rws\",\n",
+    "            num_parents_mating=2,\n",
+    "            crossover_probability=0.9,\n",
+    "            crossover_type=\"two_points\",\n",
+    "            mutation_type=\"swap\",\n",
+    "            mutation_probability=0.01,\n",
+    "        )\n",
+    "\n",
+    "        ga_model.run()\n",
+    "        \n",
+    "        solution, _, _ = ga_model.best_solution()\n",
+    "\n",
+    "        self.partial_order = build_partial_orders(solution, self.mutual_information, self.threshold)\n",
+    "\n",
+    "        self.partial_classifier_chains = {}\n",
+    "\n",
+    "        for label, partial_order in self.partial_order.items():\n",
+    "            classifier_chain = FixedClassifierChain(\n",
+    "                base_classifier=copy.deepcopy(self.base_classifier),\n",
+    "                order=partial_order,\n",
+    "            )\n",
+    "\n",
+    "            specific_y = y[:, partial_order].todense()\n",
+    "\n",
+    "            classifier_chain.fit(X, specific_y)\n",
+    "\n",
+    "            self.partial_classifier_chains[label] = classifier_chain\n",
+    "\n",
+    "        best_classifier = FixedClassifierChain(\n",
+    "            base_classifier=copy.deepcopy(self.base_classifier),\n",
+    "            order=solution,\n",
+    "        )\n",
+    "\n",
+    "        best_classifier.fit(X, y)\n",
+    "\n",
+    "        self.best_classifier = best_classifier\n",
+    "    \n",
+    "    def model_fitness_func(self, ga_instance: Any, solution: Any, solution_idx: Any) -> float:\n",
+    "        return self.test_solution(solution)\n",
+    "\n",
+    "    def test_solution(self, label_order: List[int]) -> float:\n",
+    "        if self.conditional_entropies is None:\n",
+    "            raise Exception(\"probabilities and entropies must be calculated before testing a solution\")\n",
+    "        \n",
+    "        lop_matrix = build_lop_matrix(label_order, self.conditional_entropies)\n",
+    "        return calculate_lop(lop_matrix)\n",
+    "    \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        if self.best_classifier is None:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
+    "        return self.best_classifier.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "will start training for label 2\n",
+      "input size is (1211, 294)\n",
+      "finished training for label 2\n",
+      "will start training for label 0\n",
+      "input size is (1211, 295)\n",
+      "finished training for label 0\n",
+      "will start training for label 1\n",
+      "input size is (1211, 295)\n",
+      "finished training for label 1\n",
+      "will start training for label 3\n",
+      "input size is (1211, 295)\n",
+      "finished training for label 3\n",
+      "will start training for label 5\n",
+      "input size is (1211, 297)\n",
+      "finished training for label 5\n",
+      "will start training for label 4\n",
+      "input size is (1211, 297)\n",
+      "finished training for label 4\n",
+      "(partial) hamming loss: 0.09002229654403568\n",
+      "(partial) f1 score: 0.6898447036253601\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FixedClassifierChainWithPartial:\n",
+    "    \"\"\"\n",
+    "    Allows for partial orders to be used in the classifier chain.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, base_classifier: Any, order: List[int], partial_orders: Dict[int, List[int]]) -> None:\n",
+    "        self.base_classifier = base_classifier\n",
+    "        self.order = order\n",
+    "        self.partial_orders = partial_orders\n",
+    "        # TODO: should have a validation for the order, as it should not contain duplicated values\n",
+    "    \n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        label_count = y.shape[1]\n",
+    "        # TODO: maybe add some validation, sa the label count must match the order length\n",
+    "\n",
+    "        self.classifiers = {}\n",
+    "        # using a dict instead of a list as the index has to be the label following the custom order\n",
+    "        # a list would also work, but it is more readable this way\n",
+    "\n",
+    "        self.metrics = []\n",
+    "\n",
+    "        label_values_obtained = {}\n",
+    "\n",
+    "        for label in self.order:\n",
+    "            y_label = y[:, label].todense()\n",
+    "            y_label_vector = np.asarray(y_label).reshape(-1)\n",
+    "            # convert_matrix_to_vector\n",
+    "\n",
+    "            X_local_extended = X.todense()\n",
+    "            \n",
+    "            partial_order = self.partial_orders[label]\n",
+    "            if len(partial_order) > 0:\n",
+    "                labels_to_expand = pd.DataFrame(label_values_obtained).loc[:, partial_order].values\n",
+    "                X_local_extended = np.hstack([X.todense(), labels_to_expand])\n",
+    "\n",
+    "            X_local_extended = np.asarray(X_local_extended)\n",
+    "\n",
+    "            print(f\"will start training for label {label}\")\n",
+    "            print(f\"input size is {X_local_extended.shape}\")\n",
+    "\n",
+    "            meta_classifier = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier.fit(X_local_extended, y_label_vector)\n",
+    "            self.classifiers[label] = meta_classifier\n",
+    "            label_values_obtained[label] = y_label_vector\n",
+    "\n",
+    "            print(f\"finished training for label {label}\")\n",
+    "\n",
+    "            # the following section gathers metrics throughout the training\n",
+    "            # it has no impact in the actual model performance, but it might\n",
+    "            # be interesting to study how to model behaves as it is being trained\n",
+    "            metrics_X_train, metrics_X_test, metrics_y_train, metrics_y_test = train_test_split(\n",
+    "                X_local_extended, y_label_vector, test_size=0.33, random_state=42\n",
+    "            )\n",
+    "\n",
+    "            meta_classifier_for_metrics = copy.deepcopy(self.base_classifier)\n",
+    "            meta_classifier_for_metrics.fit(metrics_X_train, metrics_y_train)\n",
+    "            metrics_predictions = meta_classifier_for_metrics.predict(metrics_X_test)\n",
+    "\n",
+    "            hl = metrics.hamming_loss(metrics_y_test, metrics_predictions)\n",
+    "            f1 = metrics.f1_score(metrics_y_test, metrics_predictions, average=\"macro\")\n",
+    "\n",
+    "            self.metrics.append({\n",
+    "                \"training_for_label\": label,\n",
+    "                \"hamming_loss\": hl,\n",
+    "                \"f1_score\": f1\n",
+    "            })\n",
+    "        \n",
+    "    def predict(self, X: Any) -> Any:\n",
+    "        predicted_labels = {}\n",
+    "        for label in self.order:\n",
+    "            partial_order = self.partial_orders[label]\n",
+    "            X_local_extended = np.asarray(X.todense())\n",
+    "            if len(partial_order) > 0:\n",
+    "                labels_to_expand = pd.DataFrame(predicted_labels).loc[:, partial_order].values\n",
+    "                X_local_extended = np.hstack([X.todense(), labels_to_expand])\n",
+    "            X_local_extended = np.asarray(X_local_extended)\n",
+    "\n",
+    "            prediction = self.classifiers[label].predict(X_local_extended)\n",
+    "            predicted_labels[label] = prediction\n",
+    "        \n",
+    "        predictions_in_original_label_order = []\n",
+    "        original_label_order = np.arange(len(self.order))\n",
+    "        for label in original_label_order:\n",
+    "            predictions_in_original_label_order.append(predicted_labels[label])\n",
+    "        # this is **very important**, otherwise the output of the model will not\n",
+    "        # be comparable to the testing dataset \n",
+    "\n",
+    "        reshaped_array = np.asarray(predictions_in_original_label_order).T\n",
+    "        return reshaped_array\n",
+    "\n",
+    "\n",
+    "partial_model = FixedClassifierChainWithPartial(\n",
+    "    RandomForestClassifier(random_state=42),\n",
+    "    order=[2, 0, 1, 3, 5, 4],\n",
+    "    partial_orders={2: [], 0: [2], 1: [0], 3: [0], 5: [2, 1, 3], 4: [2, 1, 5]}\n",
+    "    )\n",
+    "\n",
+    "partial_model.fit(X, y)\n",
+    "partial_preds = partial_model.predict(X_test)\n",
+    "\n",
+    "hamming_loss = metrics.hamming_loss(y_test, partial_preds)\n",
+    "f1_score = metrics.f1_score(y_test, partial_preds, average=\"macro\")\n",
+    "\n",
+    "print(f\"(partial) hamming loss: {hamming_loss}\")\n",
+    "print(f\"(partial) f1 score: {f1_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'training_for_label': 2,\n",
+       "  'hamming_loss': 0.0575,\n",
+       "  'f1_score': 0.890962962962963},\n",
+       " {'training_for_label': 0,\n",
+       "  'hamming_loss': 0.0975,\n",
+       "  'f1_score': 0.8019676293240241},\n",
+       " {'training_for_label': 1,\n",
+       "  'hamming_loss': 0.03,\n",
+       "  'f1_score': 0.9395039322444041},\n",
+       " {'training_for_label': 3,\n",
+       "  'hamming_loss': 0.065,\n",
+       "  'f1_score': 0.8742685816528846},\n",
+       " {'training_for_label': 5,\n",
+       "  'hamming_loss': 0.1075,\n",
+       "  'f1_score': 0.7334118631720888},\n",
+       " {'training_for_label': 4,\n",
+       "  'hamming_loss': 0.1225,\n",
+       "  'f1_score': 0.7437204984374796}]"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "partial_model.metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
